--- a/views/index/index.ejs
+++ b/views/index/index.ejs
@@ -17,14 +17,14 @@
                 <div class="row">
 
                     <div class="col-sm-6">
-                        <img class="sunset" src="/public/img/content-creation-agency-sydney.jpg" alt="yacht"
+                        <img class="sunset" src="<%- root %>/public/img/content-creation-agency-sydney.jpg" alt="yacht"
                             width="600">
                     </div>
 
                     <div class="col-sm-6">
                         <p class="primtexto">
                             Nosso compromisso é prover aos nossos clientes uma
-                            </br>
+                            <br/>
                             experiência diferenciada com o aluguel e venda de
                             embarcações
                             luxuosas. Cuidamos de todo o processo,
@@ -46,17 +46,17 @@
                 <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
             </ol>
             <div class="carousel-inner">
-                <div class="carousel-item active" style="background-image: url(/public/img/yacht1upd.jpg);">
+                <div class="carousel-item active" style="background-image: url(<%- root %>/public/img/yacht1upd.jpg);">
                     <div class="conteudo-carousel">
                         <button type="button" class="botao" onclick="window.open('embarcacoes')" >Conheça nossas embarcações!</button>
                     </div>
                 </div>
-                <div class="carousel-item" style="background-image: url(/public/img/yacht2.jpg);">
+                <div class="carousel-item" style="background-image: url(<%- root %>/public/img/yacht2.jpg);">
                     <div class="conteudo-carousel">
                         <p class="textmin">Os melhores yachts do mundo...</p>
                     </div>
                 </div>
-                <div class="carousel-item" style="background-image: url(/public/img/yacht3.jpg);">
+                <div class="carousel-item" style="background-image: url(<%- root %>/public/img/yacht3.jpg);">
                     <div class="conteudo-carousel">
                         <p class="textmin">na palma da sua mão!</p>
                     </div>
@@ -129,7 +129,7 @@
         }
 
         .secao1um {
-            background-color: rgb(236, 235, 235);
+            background-color: rgb(247, 247, 247);
             padding-top: 20px;
             padding-bottom: 30px;
 
