--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -34,7 +34,7 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" />
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     -->
-    <link href="/public/css/estilo.css" rel="stylesheet" />
+    <link href="<%- root %>/public/css/estilo.css" rel="stylesheet" />
 
     <%- defineContent("head") %>
 </head>
@@ -44,7 +44,7 @@
     <div class="limitador">
 
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="/"><img src="/public/img/finalissimo.png" alt="logosite" width="250"></a>
+            <a class="navbar-brand" href="<%- root %>/"><img src="<%- root %>/public/img/finalissimo.png" alt="logosite" width="250"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -53,13 +53,13 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav w-100">
                     <li class="nav-item">
-                        <a class="nav-link" href="/">Início</a>
+                        <a class="nav-link" href="<%- root %>/">Início</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/embarcacoes">Embarcações</a>
+                        <a class="nav-link" href="<%- root %>/embarcacoes">Embarcações</a>
                     </li>
                     <li class="nav-item text-center text-lg-right" style="flex: 1 1 auto; margin-top: 10px;">
-                        <a class="btn btn-warning" href="/login" target="_blank">Cadastre sua embarcação</a>
+                        <a class="btn btn-warning" href="<%- root %>/login" target="_blank">Cadastre sua embarcação</a>
                     </li>
                 </ul>
             </div>
@@ -72,12 +72,12 @@
                 <div class="row">
                     <div class="col-sm-6 text-center text-sm-left">
                         <p class="lgsite2">
-                            <img src="/public/img/finalissimo.png" alt="logosite2" width="200">
+                            <img src="<%- root %>/public/img/finalissimo.png" alt="logosite2" width="200">
                         </p>
                     </div>
 
                     <div class="col-sm-6 text-center text-sm-right">
-                        <img class="social" src="/public/img/image.png" alt="socialmedia" width="200">
+                        <img class="social" src="<%- root %>/public/img/image.png" alt="socialmedia" width="200">
                     </div>
                 </div>
             </div>
