commit final ajustes

--- a/views/index/index.ejs
+++ b/views/index/index.ejs
@@ -48,7 +48,7 @@
             <div class="carousel-inner">
                 <div class="carousel-item active" style="background-image: url(<%- root %>/public/img/yacht1upd.jpg);">
                     <div class="conteudo-carousel">
-                        <button type="button" class="botao" onclick="window.open('embarcacoes')" >Conheça nossas embarcações!</button>
+                        <button type="button" class="botao" onclick="window.open('<%- root %>/embarcacoes')" >Conheça nossas embarcações!</button>
                     </div>
                 </div>
                 <div class="carousel-item" style="background-image: url(<%- root %>/public/img/yacht2.jpg);">
